[tool.poetry]
name = "hw-6-1"
version = "0.1.0"
description = ""
authors = ["IliaPr <ilya.prianichnikov@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_6"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
